cluster/wiki-js/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-js-ingress
  namespace: wiki
  annotations:
    cert-manager.io/cluster-issuer: do-issuer-staging
spec:
  ingressClassName: nginx-ntnu
  tls:
    - hosts:
        - wiki.test.login.no
      secretName: test-wiki-tls
  rules:
    - host: wiki.test.login.no
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wiki-js-svc
                port:
                  number: 8383
